logs/build_bootstrap.log
src/sigbuild.c: In function ‘cli_cleanup’:
src/sigbuild.c:235:19: warning: implicit declaration of function ‘logger_get_log_stream’ [-Wimplicit-function-declaration]
  235 |    logger_fdebugf(logger_get_log_stream(), LOG_NORMAL, DBG_INFO, "Cleanup completed for Sigma.Build.\n");
      |                   ^~~~~~~~~~~~~~~~~~~~~
src/sigbuild.c:235:19: warning: passing argument 1 of ‘logger_fdebugf’ makes pointer from integer without a cast [-Wint-conversion]
  235 |    logger_fdebugf(logger_get_log_stream(), LOG_NORMAL, DBG_INFO, "Cleanup completed for Sigma.Build.\n");
      |                   ^~~~~~~~~~~~~~~~~~~~~~~
      |                   |
      |                   int
src/sigbuild.c:44:21: note: expected ‘FILE *’ but argument is of type ‘int’
   44 | void logger_fdebugf(FILE *, LogLevel, DebugLevel, const char *, ...);
      |                     ^~~~~~
src/sigbuild.c: At top level:
src/sigbuild.c:316:7: error: conflicting types for ‘logger_get_log_stream’; have ‘FILE *(void)’
  316 | FILE *logger_get_log_stream(void) {
      |       ^~~~~~~~~~~~~~~~~~~~~
src/sigbuild.c:235:19: note: previous implicit declaration of ‘logger_get_log_stream’ with type ‘int()’
  235 |    logger_fdebugf(logger_get_log_stream(), LOG_NORMAL, DBG_INFO, "Cleanup completed for Sigma.Build.\n");
      |                   ^~~~~~~~~~~~~~~~~~~~~
